tests/kyverno-policies/authorized-registries/kyverno-test.yaml
---
name: authorized-registries
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: authorized-registries
    rule: authorized-registries-users
    resources:
      - test-skip
    kind: Pod
    namespace: foo
    result: skip
  - policy: authorized-registries
    rule: authorized-registries-users
    resources:
      - test-pass
      - test-pass-site
    kind: Pod
    namespace: user-test
    result: pass
  - policy: authorized-registries
    rule: authorized-registries-users
    resources:
      - test-fail
    kind: Pod
    namespace: user-test
    result: fail
  - policy: authorized-registries
    rule: authorized-registries-webservices
    resources:
      - test-skip-webservice
    kind: Pod
    result: skip
  - policy: authorized-registries
    rule: authorized-registries-webservices
    resources:
      - test-pass-webservice
      - test-pass2-webservice
      - test-pass3-webservice
      - test-pass-site-webservice
    kind: Pod
    namespace: webservice
    result: pass
  - policy: authorized-registries
    rule: authorized-registries-webservices
    resources:
      - test-fail-webservice
    kind: Pod
    namespace: webservice
    result: fail
