tests/kyverno-policies/authorized-registries/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-skip
  namespace: test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pass
  namespace: user-test
spec: 
  containers:
  - name: nginx
    image: docker.io/ohiosupercomputer/nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pass-site
  namespace: user-test
spec:
  containers:
  - name: nginx
    image: example.com/nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-fail
  namespace: user-test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
