tests/kyverno-policies/authorized-registries/test.yaml
---
name: authorized-registries
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: authorized-registries
    rule: authorized-registries-users
    resource: test-skip
    kind: Pod
    result: skip
  - policy: authorized-registries
    rule: authorized-registries-users
    resource: test-pass
    kind: Pod
    result: pass
  - policy: authorized-registries
    rule: authorized-registries-users
    resource: test-pass-site
    kind: Pod
    result: pass
  - policy: authorized-registries
    rule: authorized-registries-users
    resource: test-fail
    kind: Pod
    result: fail
  - policy: authorized-registries
    rule: authorized-registries-users
    resource: test-pass-webservice
    kind: Pod
    namespace: webservice
    result: pass
  - policy: authorized-registries
    rule: authorized-registries-users
    resource: test-pass-site-webservice
    kind: Pod
    namespace: webservice
    result: pass
  - policy: authorized-registries
    rule: authorized-registries-users
    resource: test-fail-webservice
    kind: Pod
    namespace: webservice
    result: fail
